2008-08-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Escape backslashes (and
	quotes) in file names passed to the inferior process.
	Reported by "Nadeem Abdul Hamid" <nadeem@acm.org>.

2008-07-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-and-run): Don't run if there
	were compilation errors.  Switch to inf-haskell buffer after run.

	* inf-haskell.el (inferior-haskell-cabal-of-buf): Don't return
	a dead buffer.  Reported by Conal Elliott <conal@conal.net>.
	(replace-regexp-in-string): Add XEmacs compatibility.

2008-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-symbols-alist): Change the
	character used for the composition operator.

	* haskell-indent.el (haskell-indent-map): Disable C-c C-g binding since
	C-g is a special key not to be used like that.

2008-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-cabal.el (haskell-cabal-find-file): Ignore directories.

2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-spot-prompt): New function.
	(inferior-haskell-mode): Use it.
	(inferior-haskell-seen-prompt): New var.
	(inferior-haskell-wait-for-prompt): Use it.
	(inferior-haskell-send-command): Reset it.
	(inferior-haskell-type): Avoid use of remove-it.

	* inf-haskell.el (inferior-haskell-info-xref-re): Allow a column-range.
	Reported by Jose A. Ortega Ruiz <jao@google.com>.
	(inferior-haskell-error-regexp-alist): Use the extra column-end info
	if available.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indentation.el: Fix up general coding convention stuff.
	(haskell-indentation-mode): Use define-minor-mode.
	(turn-on-haskell-indentation, turn-off-haskell-indentation):
	Remove, fold into haskell-indentation-mode.

2008-02-28  Kristof Bastiaensen  <kristof@vleeuwen.org>

	* haskell-indentation.el: New file.
