@@ -1,3 +1,8 @@
+2009-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-decl-scan.el (haskell-ds-generic-find-next-decl):
+	Accept qualified import names.
+
 2008-08-26  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (inferior-haskell-load-file): Escape backslashes (and
